@@ -67,7 +67,6 @@ debian/libc6.symbols.mipsn32r6el
 debian/libc6.symbols.mipsr6
 debian/libc6.symbols.mipsr6el
 debian/libc6.symbols.powerpc
-debian/libc6.symbols.powerpcspe
 debian/libc6.symbols.ppc64
 debian/libc6.symbols.ppc64el
 debian/libc6.symbols.s390x
