@@ -1,12 +1,0 @@
-#include "libc6.symbols.common"
-ld.so.1 #PACKAGE# #MINVER#
-#include "symbols.wildcards"
-### TLS support enabled in Debian upload 2.3.5
- __tls_get_addr@GLIBC_2.3 2.3.5
-libc.so.6 #PACKAGE# #MINVER#
-#include "symbols.wildcards"
-###
-### Override headers already defined in libc6.symbols.common
-###
-libpthread.so.0 #PACKAGE# (>= 2.3.5), #PACKAGE# #MINVER#
-#include "symbols.wildcards"
