@@ -1,3 +1,0 @@
-# configuration options for all flavours
-extra_config_options = --without-fp
-
