@@ -50,6 +50,10 @@ glibc (2.29-0experimental0) UNRELEASED; urgency=medium
     - debian/patches/any/git-libio-stdout-putc.diff: rebased.
   * debian/control.in/main, debian/rules: drop the multiarch-support package.
     Closes: #910669.
+  * debian/glibc-source.filelist, debian/libc6.symbols.powerpcspe,
+    debian/rules.d/control.mk, debian/sysdeps/powerpcspe.mk,
+    debian/testsuite-xfail-debian.mk: Drop the powerpcspe architecture, it is
+    not supported anymore by GCC 9 and will be removed in GLIBC 2.30.
 
  -- Adam Conrad <adconrad@0c3.net>  Wed, 20 Feb 2019 01:22:52 -0700
 
